fix mobile menu overflow, fix mobile select wallet

--- a/src/components/Home/ChangeWallet/styles.module.scss
+++ b/src/components/Home/ChangeWallet/styles.module.scss
@@ -11,11 +11,35 @@
 
   .select{
     width: 100%;
+    height: 50px;
     border-radius: 6px;
     padding: 11px 13px;
+    appearance: none; 
+    border: 1px solid $secondary3;
+    background-color: $bg4;
+    cursor: pointer; 
 
     @media screen and (min-width: map-get($breakpoints, 'tablet')){
       padding: 12px 16px;
     }
+
+    &:focus {
+      outline: none; 
+      border-color: $primary;
+    }
+
+    option {
+      margin-top: 10px;
+      background-color: $bg4; 
+    }
+  }
+
+  &::after {
+    content: '\2039'; 
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%) scale(150%) rotate(270deg);
+    pointer-events: none; 
   }
 }
