--- a/src/components/Home/HomeNavigation/styles.module.scss
+++ b/src/components/Home/HomeNavigation/styles.module.scss
@@ -74,6 +74,8 @@
   background: #F4F8FF;
   .navigationContent {
     padding: 0;
+    max-height: calc(100vh - 60px);
+    overflow: auto;
   }
 }
 
